--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "TheodoEvolution\\HttpFoundationBundle": "src/TheodoEvolution"
+            "TheodoEvolution\\HttpFoundationBundle": ""
         }
     },
     "require": {
