--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         ]
     },
     "minimum-stability": "dev",
+    "target-dir": "TheodoEvolution/HttpFoundationBundle",
     "extra": {
         "symfony-app-dir": "../../app",
         "symfony-web-dir": "../../web"
