--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,11 +11,11 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "../../../app/bootstrap.php.cache" >
+    bootstrap                   = "./Tests/bootstrap.php" >
 
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>Tests</directory>
+            <directory>./Tests</directory>
         </testsuite>
     </testsuites>
 
@@ -27,12 +27,10 @@
 
     <filter>
         <whitelist>
-            <directory>../../src</directory>
+            <directory>./</directory>
             <exclude>
-                <directory>../../src/*/*Bundle/Resources</directory>
-                <directory>../../src/*/*Bundle/Tests</directory>
-                <directory>../../src/*/Bundle/*Bundle/Resources</directory>
-                <directory>../../src/*/Bundle/*Bundle/Tests</directory>
+                <directory>./Resources</directory>
+                <directory>./Tests</directory>
             </exclude>
         </whitelist>
     </filter>
