--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "theodo/evolution-session-integration-bundle",
     "type": "symfony-bundle",
     "description": "The \"Theodo Evolution Session Integration\" bundle",
-    "keywords": [],
+    "keywords": ["session", "symfony1", "symfony2"],
     "homepage": "http://www.theodo.fr",
     "authors": [
         {
@@ -10,34 +10,23 @@
             "homepage": "http://www.theodo.fr"
         }
     ],
+    "require": {
+        "php": ">=5.3.3",
+        "symfony/http-foundation": ">=2.1.*, <3.0",
+        "symfony/http-kernel": ">=2.1.*, <3.0",
+        "symfony/config": ">=2.1.*, <3.0",
+        "symfony/event-dispatcher": ">=2.1.*, <3.0"
+    }
+    "minimum-stability": "dev",
+    "target-dir": "Theodo/Evolution/Bundle/SessionIntegrationBundle",
     "autoload": {
         "psr-0": {
             "Theodo\\Evolution\\Bundle\\SessionIntegrationBundle": ""
         }
     },
-    "require": {
-        "php": ">=5.3.3",
-        "symfony/http-foundation": "2.1.*",
-        "symfony/http-kernel": "2.1.*",
-        "symfony/config": "2.1.*",
-        "symfony/event-dispatcher": "2.1.*"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
-        ],
-        "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
-        ]
-    },
-    "minimum-stability": "dev",
-    "target-dir": "Theodo/Evolution/Bundle/SessionIntegrationBundle",
     "extra": {
-        "symfony-app-dir": "../../app",
-        "symfony-web-dir": "../../web"
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
