--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/http-foundation": ">=2.1.*, <3.0",
-        "symfony/http-kernel": ">=2.1.*, <3.0",
-        "symfony/config": ">=2.1.*, <3.0",
-        "symfony/event-dispatcher": ">=2.1.*, <3.0"
+        "symfony/http-foundation": ">=2.1.0,<3.0",
+        "symfony/http-kernel": ">=2.1.0,<3.0",
+        "symfony/config": ">=2.1.0,<3.0",
+        "symfony/event-dispatcher": ">=2.1.0,<3.0"
     },
     "minimum-stability": "dev",
     "target-dir": "Theodo/Evolution/Bundle/SessionIntegrationBundle",
