--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "symfony/config": ">=2.1.0,<3.0",
         "symfony/event-dispatcher": ">=2.1.0,<3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "minimum-stability": "dev",
     "target-dir": "Theodo/Evolution/Bundle/SessionIntegrationBundle",
     "autoload": {
