--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "symfony/event-dispatcher": ">=2.1.0,<3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "symfony/dependency-injection": ">=2.1.0,<3.0",
+        "symfony/yaml": ">=2.1.0,<3.0"
     },
     "minimum-stability": "dev",
     "target-dir": "Theodo/Evolution/Bundle/SessionBundle",
