Add missing license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "The \"Theodo Evolution Session Integration\" bundle",
     "keywords": ["session", "symfony1", "symfony2"],
     "homepage": "http://www.theodo.fr",
+    "license": "MIT",
     "authors": [
         {
             "name": "Theodo",
