--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: php
 
-php:
-  - 5.3
-  - 5.4
+php: [5.3, 5.4, 5.5, hhvm]
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --prefer-source --dev
+  - composer install --dev --prefer-source
 
 notifications:
   email:
